k8s/media/plex/plex.yaml
---
# Plex Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:latest
        ports:
        - containerPort: 32400 # Plex web UI
        volumeMounts:
        - name: config
          mountPath: /config
        - name: video-pvc
          mountPath: /movies
          subPath: Movies
        - name: video-pvc
          mountPath: /home-movies
          subPath: Home Movies
        - name: video-pvc
          mountPath: /christmas
          subPath: Christmas
        - name: video-pvc
          mountPath: /educational
          subPath: Educational
        - name: video-pvc
          mountPath: /tv
          subPath: TV Shows
        - name: music-pvc
          mountPath: /music
        resources:
          requests:
            cpu: 2
            memory: 8Gi
        livenessProbe:
          httpGet:
            path: /web
            port: 32400
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: video-pvc
        persistentVolumeClaim:
          claimName: video-pvc
      - name: music-pvc
        persistentVolumeClaim:
          claimName: music-pvc
---
# Plex Service
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  selector:
    app: plex
  ports:
  - name: web
    protocol: TCP
    port: 32400
    targetPort: 32400
  type: LoadBalancer
  loadBalancerIP: 192.168.10.56
---
# Plex Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
#  ingressClassName: trafeik
#  defaultBackend:
#    service:
#      name: plex
#      port:
#        number: 32400
  rules:
  - host: plex.thewortmans.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              number: 32400
